# pymcr-torch-demo

./: pyproject.toml
data/ethanol/: README.md  ethanol-df.2000inttime-abs.csv  ethanol-mcr.npz  lsq.npz
notebooks/: ethanol-mcr.ipynb  pyro-mcr.ipynb  torch-mcr.ipynb
src/pymcr_torch_demo/: __init__.py  pyro_model.py  torch_model.py
